@@ -1,4 +1,10 @@
 
+- (Mar 7 2009) Olivier Hervieu pointed out a flaw in the
+  libssh2_channel_x11_req_ex() function that made it produce a crappy random
+  chunk of data. Peter Stuge improved the fix to not do out-of-boundary
+  writes. I (Daniel Stenberg) replaced the snprintf() with a plain sprintf()
+  since the size argument wasn't adding anything anyway.
+
 - (Feb 23 2009) Added libssh2_version()
 
 - (Feb 20 2009) libssh2_channel_direct_tcpip_ex() bug #1902169 fixed, which
